export const snapshot = {};

snapshot[`parse an empty line to an empty tree 1`] = `
{
  down: [],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`parse a nonempty line to a group of one 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`parse nonempty lines to group (×2) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`parse nonempty lines to group (×3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "",
          expand: false,
          id: 4,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`two newlines trail the current group 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`two newlines and a nonempty line start a group 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`two newlines start a group (×3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          id: 6,
          type: "EOL",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
    <ref *4> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 8,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *4],
        },
      ],
      id: 7,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`multi-line group (0) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 4,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 6,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 5,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`multi-line group (1) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "",
          expand: false,
          id: 6,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`multi-line group (2) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 6,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          id: 7,
          type: "EOL",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`multi-line groups (3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 4,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 7,
          indent: 0,
          text: "d",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 8,
          indent: 0,
          text: "e",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 9,
          indent: 0,
          text: "f",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          id: 10,
          type: "EOL",
          up: [Circular *3],
        },
      ],
      id: 6,
      type: "Group",
      up: [Circular *1],
    },
    <ref *4> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 12,
          indent: 0,
          text: "g",
          type: "Line",
          up: [Circular *4],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 13,
          indent: 0,
          text: "h",
          type: "Line",
          up: [Circular *4],
        },
        {
          down: [],
          end: "",
          expand: false,
          id: 14,
          indent: 0,
          text: "i",
          type: "Line",
          up: [Circular *4],
        },
      ],
      id: 11,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`a trailing newline is ignored (0) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`a trailing newline is ignored (1) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`a trailing newline is ignored (2) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`a trailing newline is ignored (3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          id: 6,
          type: "EOL",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
    <ref *4> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 8,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *4],
        },
      ],
      id: 7,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`a trailing newline is ignored (4) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 5,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 6,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`an empty line before a group is added to the preceding group (0) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 4,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 6,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 5,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`an empty line before a group is added to the preceding group (1) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 4,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 6,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 7,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 9,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 8,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`an empty line before a group is added to the preceding group (2) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 4,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 6,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 7,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 9,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 8,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`an empty line before a group is added to the preceding group (3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 4,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 6,
          type: "EOL",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 7,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 9,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *3],
        },
        {
          down: [],
          end: "LF",
          id: 10,
          type: "EOL",
          up: [Circular *3],
        },
      ],
      id: 8,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`indented lines are subordinates (0) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        <ref *3> {
          down: [
            <ref *4> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 4,
                  indent: 2,
                  text: "c",
                  type: "Line",
                  up: [Circular *4],
                },
              ],
              end: "LF",
              expand: false,
              id: 3,
              indent: 1,
              text: "b",
              type: "Line",
              up: [Circular *3],
            },
          ],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`indented lines are subordinates (1) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        <ref *3> {
          down: [
            <ref *4> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 4,
                  indent: 2,
                  text: "c",
                  type: "Line",
                  up: [Circular *4],
                },
              ],
              end: "LF",
              expand: false,
              id: 3,
              indent: 1,
              text: "b",
              type: "Line",
              up: [Circular *3],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 5,
              indent: 1,
              text: "d",
              type: "Line",
              up: [Circular *3],
            },
          ],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`indented lines are subordinates (2) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 3,
          indent: 0,
          text: "b",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 4,
          indent: 0,
          text: "c",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`indented lines are subordinates (3) 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        <ref *3> {
          down: [
            <ref *4> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 4,
                  indent: 2,
                  text: "c",
                  type: "Line",
                  up: [Circular *4],
                },
              ],
              end: "LF",
              expand: false,
              id: 3,
              indent: 1,
              text: "b",
              type: "Line",
              up: [Circular *3],
            },
          ],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *5> {
      down: [
        <ref *6> {
          down: [
            {
              down: [],
              end: "LF",
              expand: false,
              id: 8,
              indent: 1,
              text: "e",
              type: "Line",
              up: [Circular *6],
            },
            <ref *7> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 10,
                  indent: 2,
                  text: "g",
                  type: "Line",
                  up: [Circular *7],
                },
              ],
              end: "LF",
              expand: false,
              id: 9,
              indent: 1,
              text: "f",
              type: "Line",
              up: [Circular *6],
            },
            <ref *8> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 12,
                  indent: 2,
                  text: "x",
                  type: "Line",
                  up: [Circular *8],
                },
              ],
              end: "LF",
              expand: false,
              id: 11,
              indent: 1,
              text: "h",
              type: "Line",
              up: [Circular *6],
            },
          ],
          end: "LF",
          expand: false,
          id: 7,
          indent: 0,
          text: "d",
          type: "Line",
          up: [Circular *5],
        },
        {
          down: [],
          end: "LF",
          expand: false,
          id: 13,
          indent: 0,
          text: "i",
          type: "Line",
          up: [Circular *5],
        },
        <ref *9> {
          down: [
            {
              down: [],
              end: "LF",
              expand: false,
              id: 15,
              indent: 1,
              text: "k",
              type: "Line",
              up: [Circular *9],
            },
          ],
          end: "LF",
          expand: false,
          id: 14,
          indent: 0,
          text: "j",
          type: "Line",
          up: [Circular *5],
        },
        {
          down: [],
          end: "LF",
          id: 16,
          type: "EOL",
          up: [Circular *5],
        },
      ],
      id: 6,
      type: "Group",
      up: [Circular *1],
    },
    <ref *10> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 18,
          indent: 0,
          text: "l",
          type: "Line",
          up: [Circular *10],
        },
        {
          down: [],
          end: "LF",
          id: 19,
          type: "EOL",
          up: [Circular *10],
        },
      ],
      id: 17,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`bad indent at start of file 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`bad indent after EOL 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        <ref *3> {
          down: [
            {
              down: [],
              end: "",
              expand: false,
              id: 3,
              indent: 1,
              text: "a",
              type: "Line",
              up: [Circular *3],
            },
          ],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "",
          type: "Line",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`bad indent continuation 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        <ref *3> {
          down: [
            {
              down: [],
              end: "LF",
              expand: false,
              id: 3,
              indent: 1,
              text: "b",
              type: "Line",
              up: [Circular *3],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 4,
              indent: 1,
              text: "c",
              type: "Line",
              up: [Circular *3],
            },
          ],
          end: "LF",
          expand: false,
          id: 2,
          indent: 0,
          text: "a",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "LF",
          id: 5,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *4> {
      down: [
        <ref *5> {
          down: [
            <ref *6> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 9,
                  indent: 2,
                  text: "",
                  type: "Line",
                  up: [Circular *6],
                },
              ],
              end: "LF",
              expand: false,
              id: 8,
              indent: 1,
              text: "e",
              type: "Line",
              up: [Circular *5],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 10,
              indent: 1,
              text: "f",
              type: "Line",
              up: [Circular *5],
            },
            <ref *7> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 12,
                  indent: 2,
                  text: "",
                  type: "Line",
                  up: [Circular *7],
                },
              ],
              end: "LF",
              expand: false,
              id: 11,
              indent: 1,
              text: "g",
              type: "Line",
              up: [Circular *5],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 13,
              indent: 1,
              text: "h",
              type: "Line",
              up: [Circular *5],
            },
          ],
          end: "LF",
          expand: false,
          id: 7,
          indent: 0,
          text: "d",
          type: "Line",
          up: [Circular *4],
        },
        {
          down: [],
          end: "LF",
          id: 14,
          type: "EOL",
          up: [Circular *4],
        },
      ],
      id: 6,
      type: "Group",
      up: [Circular *1],
    },
    <ref *8> {
      down: [
        <ref *9> {
          down: [
            <ref *10> {
              down: [
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 18,
                  indent: 2,
                  text: "",
                  type: "Line",
                  up: [Circular *10],
                },
              ],
              end: "LF",
              expand: false,
              id: 17,
              indent: 1,
              text: "j",
              type: "Line",
              up: [Circular *9],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 19,
              indent: 1,
              text: "k",
              type: "Line",
              up: [Circular *9],
            },
          ],
          end: "LF",
          expand: false,
          id: 16,
          indent: 0,
          text: "i",
          type: "Line",
          up: [Circular *8],
        },
        {
          down: [],
          end: "LF",
          id: 20,
          type: "EOL",
          up: [Circular *8],
        },
      ],
      id: 15,
      type: "Group",
      up: [Circular *1],
    },
    <ref *11> {
      down: [
        <ref *12> {
          down: [
            {
              down: [],
              end: "LF",
              expand: false,
              id: 23,
              indent: 1,
              text: "",
              type: "Line",
              up: [Circular *12],
            },
            <ref *13> {
              down: [
                <ref *14> {
                  down: [
                    <ref *15> {
                      down: [
                        {
                          down: [],
                          end: "LF",
                          expand: false,
                          id: 27,
                          indent: 4,
                          text: "",
                          type: "Line",
                          up: [Circular *15],
                        },
                      ],
                      end: "LF",
                      expand: false,
                      id: 26,
                      indent: 3,
                      text: "o",
                      type: "Line",
                      up: [Circular *14],
                    },
                  ],
                  end: "LF",
                  expand: false,
                  id: 25,
                  indent: 2,
                  text: "n",
                  type: "Line",
                  up: [Circular *13],
                },
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 28,
                  indent: 2,
                  text: "p",
                  type: "Line",
                  up: [Circular *13],
                },
                {
                  down: [],
                  end: "LF",
                  expand: false,
                  id: 29,
                  indent: 2,
                  text: "q",
                  type: "Line",
                  up: [Circular *13],
                },
              ],
              end: "LF",
              expand: false,
              id: 24,
              indent: 1,
              text: "m",
              type: "Line",
              up: [Circular *12],
            },
          ],
          end: "LF",
          expand: false,
          id: 22,
          indent: 0,
          text: "l",
          type: "Line",
          up: [Circular *11],
        },
        {
          down: [],
          end: "LF",
          id: 30,
          type: "EOL",
          up: [Circular *11],
        },
      ],
      id: 21,
      type: "Group",
      up: [Circular *1],
    },
    <ref *16> {
      down: [
        {
          down: [],
          end: "LF",
          expand: false,
          id: 32,
          indent: 0,
          text: "r",
          type: "Line",
          up: [Circular *16],
        },
        <ref *17> {
          down: [
            {
              down: [],
              end: "LF",
              expand: false,
              id: 34,
              indent: 1,
              text: "",
              type: "Line",
              up: [Circular *17],
            },
            {
              down: [],
              end: "LF",
              expand: false,
              id: 35,
              indent: 1,
              text: "t",
              type: "Line",
              up: [Circular *17],
            },
          ],
          end: "LF",
          expand: false,
          id: 33,
          indent: 0,
          text: "s",
          type: "Line",
          up: [Circular *16],
        },
        {
          down: [],
          end: "",
          expand: false,
          id: 36,
          indent: 0,
          text: "u",
          type: "Line",
          up: [Circular *16],
        },
      ],
      id: 31,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`Windows carriage return and linefeed 1`] = `
<ref *1> {
  down: [
    <ref *2> {
      down: [
        {
          down: [],
          end: "CRLF",
          expand: false,
          id: 2,
          indent: 0,
          text: "abc",
          type: "Line",
          up: [Circular *2],
        },
        {
          down: [],
          end: "CRLF",
          id: 3,
          type: "EOL",
          up: [Circular *2],
        },
      ],
      id: 1,
      type: "Group",
      up: [Circular *1],
    },
    <ref *3> {
      down: [
        {
          down: [],
          end: "",
          expand: false,
          id: 5,
          indent: 0,
          text: "def",
          type: "Line",
          up: [Circular *3],
        },
      ],
      id: 4,
      type: "Group",
      up: [Circular *1],
    },
  ],
  id: 0,
  indentW: 2,
  type: "TextTree",
}
`;

snapshot[`move after peer with children 1`] = `
"a

A
  B
    C
      D
      E
  F
b
G
H"
`;
